--- a/_config.yml
+++ b/_config.yml
@@ -73,4 +73,5 @@ theme: hueman
 # Deployment
 ## Docs: https://hexo.io/docs/deployment.html
 deploy:
-  type:
+  type: git
+  repo: https://github.com/goopscoop/scbarrus-home
